# ngx-dangote-digest

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: daily-digest.yml  tests.yml
config/: tickers.yaml
data/: quotes.db
reports/: latest.md
reports/history/: 2026-06-05.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md
src/ngx_digest/: calendar.py  cli.py  fetcher.py  models.py  report.py  storage.py  summarize.py
tests/: test_calendar.py  test_fetcher.py  test_report.py  test_storage.py  test_summarize.py
tests/fixtures/: company_profile.html  ngx_equities.json  sample_quote.html
