[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ngx-dangote-digest"
version = "0.1.0"
description = "Daily scrape-and-summarize digest for NGX-listed Dangote companies"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ngx-digest = "ngx_digest.cli:main"
ngx-report = "ngx_digest.report:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
